[tool.poetry]
name = "gapla-assistant-bot"
version = "0.1.0"
description = ""
authors = ["Wyatt Baek <president@gaplagov.org>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
